--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     ]
   },
   "devDependencies": {
-    "redux-devtools-extension": "^2.13.8"
+    "node-sass": "^4.12.0",
+    "redux-devtools-extension": "^2.13.8",
+    "sass-loader": "^7.1.0"
   }
 }
