--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "react-redux-filling-form",
+  "homepage": "https://golovkin1992.github.io/redux-redux-filling-form/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "eslint-config-airbnb": "^17.1.1",
+    "gh-pages": "^2.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -14,6 +16,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
